--- a/NewsExplorer/package.json
+++ b/NewsExplorer/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "axios": "^1.7.3",
     "expo": "~51.0.24",
+    "expo-file-system": "~17.0.1",
     "expo-status-bar": "~1.12.1",
+    "papaparse": "^5.4.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-svg": "^15.2.0",
-    "react-native-svg-transformer": "^1.5.0"
+    "react-native-svg-transformer": "^1.5.0",
+    "expo-asset": "~10.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
