--- a/NewsExplorer/package.json
+++ b/NewsExplorer/package.json
@@ -10,15 +10,19 @@
   },
   "dependencies": {
     "axios": "^1.7.3",
+    "body-parser": "^1.20.2",
+    "csv-parser": "^3.0.0",
+    "csv-writer": "^1.6.0",
     "expo": "~51.0.24",
+    "expo-asset": "~10.0.10",
     "expo-file-system": "~17.0.1",
     "expo-status-bar": "~1.12.1",
+    "express": "^4.19.2",
     "papaparse": "^5.4.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-svg": "^15.2.0",
-    "react-native-svg-transformer": "^1.5.0",
-    "expo-asset": "~10.0.10"
+    "react-native-svg-transformer": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
